# dataforge-ai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: loan_applications.csv  payments.csv  people.csv  seed_postgres.sql
src/dataforge/: __init__.py  ai_base.py  ai_dataframe.py  ai_features.py  ai_profiling.py  ai_quality.py  ai_sql.py  llm.py  llm_anthropic.py  llm_bedrock.py  llm_openai.py  plan_cache.py  run_state.py
